src/np222kk/dv507/a2/test/cases/negative/test_methodarray_04.ofp
void main() {

    bool b = method()[0];
}

bool method() {
    return true;
}